3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

 server/swap.c: fix crash with map reset (parameter is map, not path).
Nicolas Weeger 2007-04-06

Add 'Object.Count' property (read-only).
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
Nicolas Weeger 2007-04-06

Fix wrong set/get key checks.
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2007-04-06

Add 'Object.Enemy' property.
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
Nicolas Weeger 2007-04-06

types/legacy/apply.c: fix scrolls not taking direction into account.
Nicolas Weeger 2007-04-06

Remove support for obsolete 'no_pass' attribute.
--
doc/Developers/{objects,spells,map-technical}: Update documentation about
   no_pass attribute.
lib/adm/getfaces.pl: Scan for move_blocked instead of no_pass.
common/loader.l: Remove support for no_pass attribute.
crossedit/Attr.c: Remove no_pass from the list of valid attribute names.
Andreas Kirschbaum 2007-04-05

types/exit/exit.c: Fix bad definition of exit_type_apply.
--
types/{legacy/apply.c, clock/clock.c}, server/ob_types.c: Move apply logic for
  clocks out of legacy area in the ob_method system.
--
types/{legacy/apply.c, exit/exit.c}: Move apply logic for exits out of legacy
  area in the ob_method system.
Alex Schultz 2007-04-05

Tweak harvesting skill per Lalo's suggestions. If a living object is harvested,
 goes to map instead of in the inventory. Also make the key/value checks more meaningful.
 server/c_misc.c
Nicolas Weeger 2007-04-04

server/{spell_attack.c, spell_util.c, spell_effect.c}, include/{libproto.h,